@@ -1,3 +1,9 @@
+2010-09-02  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/common/xstring.c :
+	  Handle errors from XSI-compliant version of strerror_r()
+	  in xstrerrorcat() implementation.
+
 2010-09-01  Mark Grondona <mgrondona@llnl.gov>
 
 	* README.modules, doc/pdcp.1.in, doc/pdsh.1.in :
